examples/test/testpolicy983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy983
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key30: value35
      key0: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value39
      podSelector:
        matchLabels:
          key17: value16
          key27: value46
